--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Contents/Home/HomeStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Calculate</title>
+    <title>Home</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="NativeStyle.css">
@@ -187,61 +187,7 @@
 </span>
 </div>              
 </div>
-<style>
-    #about_faculty
-{
-	width:100%; height:auto; float:left;
-	margin-top:30px; margin-bottom:60px;
-}
-#about_faculty h2
-{
-	width: 100%; height:auto; float:left;
-	font-size:24px; letter-spacing:2px; text-transform:uppercase; 
-}
-#faculty_about_left
-{
-	width:50%; height:auto; float:left; 
-	padding-right:5%; border-right: 3px solid #e77a20;
-}
-#faculty_about_left ul
-{
-	width:100%; height:auto; float:left;
-	margin-top:30px;
-}
-#faculty_about_left ul li
-{
-	width:46%; height:100px; float:left;
-	padding-top:15px; padding-bottom:15px; margin-left:2%; margin-right:2%; margin-top:1.5%; margin-bottom:1.5%; padding-left:10px; padding-right:10px;
-	background:#e06f2d; border-radius:15px;
-}
-#faculty_about_left ul li a
-{
-	width:100%; height:auto; float:left;
-	font-size:24px; color:#FFF; text-transform:uppercase; letter-spacing:2px; text-align:center; font-weight:700; text-decoration:none;
-}
-#faculty_about_right
-{
-	width:45%; height:auto; float:left;
-	margin-left:5%; margin-top:50px; 
-}
-#faculty_about_right img
-{
-	width:75%; height:auto; float:left;
-	margin-right:25%;
-}
-#faculty_about_right p
-{
-	width:100%; height:auto; float:left; 
-	margin-top:30px; 
-	font-size:16px; line-height:27px; 
-}
-#faculty_about_right span
-{
-	width:100%; height:auto; float:left;
-	margin-top:15px; 
-	font-size:18px; text-transform:uppercase; letter-spacing:2px; color:#B35B51; font-weight:600;
-}
-</style>
+
 </div>
 
 <section>
@@ -325,141 +271,6 @@
     </div>
 </div>
 
-<style>
-    
-    #home_news {
-        width: 100%;
-        height: auto;
-        margin: 30px 0 60px;
-    }
-
-    #home_news h2 {
-        font-size: 24px;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        margin-bottom: 35px;
-        
-    }
-
-    #home_news h5 {
-        font-size: 16px;
-        text-transform: uppercase;
-        text-decoration: underline;
-        text-decoration-color: #d48439;
-        padding-left: 25px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-
-    #home_news_inner {
-        width: 100%;
-    }
-
-    #home_news_inner ul {
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2%;
-    }
-
-    #home_news_inner ul li {
-        width: 31.33%;
-        position: relative;
-        overflow: hidden;
-    }
-
-    #home_news_inner ul li a {
-        display: block;
-    }
-
-    .home_news_inner_img img {
-        width: 100%;
-        border-radius: 15px;
-    }
-
-    .home_news_inner_text {
-        width: 90%;
-        position: absolute;
-        top: 0;
-        margin: 0 5%;
-        padding: 25px 0;
-        z-index: 399;
-    }
-
-    .home_news_inner_text h3 {
-        margin-top: 275px;
-        font-size: 24px;
-        color: #FFF;
-        font-weight: 900;
-        letter-spacing: 2px;
-    }
-
-    .home_news_inner_text big {
-        display: block;
-        width: 50%;
-        margin: 5px auto;
-        background: #e46c1d;
-        border-radius: 0 0 15px 15px;
-        font-size: 14px;
-        color: #FFF;
-        font-weight: 600;
-        text-align: center;
-    }
-
-
-div.gallery {
-  border: 1px solid #ccc;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-</style>
-
-
-
-
-</style>
 </div>
 </section>
 <hr>
