--- a/aboutus.html
+++ b/aboutus.html
@@ -287,33 +287,6 @@
                     </div>
                 </div>
 
-                <!--Team member 06-->
-                <div class="member">
-                    <!--Change your PP here--->
-                    <img src="https://avatars.githubusercontent.com/u/107571029?v=4" class="mem_pp">
-                    <div class="mem_details">
-                        <p class="mem_name">Hafsa Sindikar</p>
-                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
-                        <div class="mem_socials">
-                            <!--Change ur socials here-->
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://github.com/HafsaSindikar', '_blank');"
-                                class="gthb_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://www.facebook.com/profile.php?id=100086929982474', '_blank');"
-                                class="fb_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://www.instagram.com/hafsazinthikar', '_blank');"
-                                class="insta_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://www.linkedin.com/in/hafsa-sindikar-8195532a0/', '_blank');"
-                                class="lkin_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://twitter.com/hafsasindikar', '_blank');"
-                                class="twt_logo mem_soc_rec"></div>
-                        </div>
-                    </div>
-                </div>
 
                 <!--Team member 07-->
                 <div class="member">
@@ -371,14 +344,14 @@
                 <!--Team member 09-->
                 <div class="member">
                     <!--Change your PP here--->
-                    <img src="https://avatars.githubusercontent.com/u/116477450?v=4" class="mem_pp">
+                    <img src="https://avatars.githubusercontent.com/u/153409947?v=4" class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Rithosha Diwyanjalee</p>
+                        <p class="mem_name">Wimansi Navoda </p>
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
-                                onclick="window.open('https://github.com/vidura13', '_blank');"
+                                onclick="window.open('https://github.com/wimansi-navoda', '_blank');"
                                 class="gthb_logo mem_soc_rec"></div>
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)"
                                 onclick="window.open('https://www.instagram.com/vd___a', '_blank');"
