--- a/Home.html
+++ b/Home.html
@@ -63,7 +63,7 @@
     </header>
 
     <!-- Slideshow container -->
-    <div class="slideshow-container">
+    <div class="slideshow-container" style="height: 600px; width: 2000px;">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <img src="Source/home.jpg" style="width:100%">
