--- a/Calculate.html
+++ b/Calculate.html
@@ -50,7 +50,7 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="Home.html" style="--i:0;">Home</a>
+            <a href="index.html" style="--i:0;">Home</a>
             <a href="Calculate.html" style="--i:1;">Calculate</a>
             <a href="article.html" style="--i:2;">Article</a>
             <a href="events.html" style="--i:3;">Events</a>
