--- a/Calculate.html
+++ b/Calculate.html
@@ -50,11 +50,11 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" style="--i:0;">Home</a>
-            <a href="Calculate.html" style="--i:1;">Calculate</a>
-            <a href="article.html" style="--i:2;">Article</a>
-            <a href="events.html" style="--i:3;">Events</a>
-            <a href="aboutus.html" style="--i:4;">About Us</a>
+            <a href="index.html" class="nav-link" data-index="0">Home</a>
+            <a href="Calculate.html" class="nav-link" data-index="1">Calculate</a>
+            <a href="article.html" class="nav-link" data-index="2">Article</a>
+            <a href="events.html" class="nav-link" data-index="3">Events</a>
+            <a href="aboutus.html" class="nav-link" data-index="4">About Us</a>
         </nav>
     </header>
 
