--- a/article.html
+++ b/article.html
@@ -53,11 +53,11 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="index.html" style="--i:0;">Home</a>
-            <a href="Calculate.html" style="--i:1;">Calculate</a>
-            <a href="article.html" style="--i:2;">Article</a>
-            <a href="events.html" style="--i:3;">Events</a>
-            <a href="aboutus.html" style="--i:4;">About Us</a>
+            <a href="index.html">Home</a>
+            <a href="Calculate.html">Calculate</a>
+            <a href="article.html">Article</a>
+            <a href="events.html">Events</a>
+            <a href="aboutus.html">About Us</a>
         </nav>
     </header> <br><br>
 
