--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Contents/Home/HomeStyle.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Home</title>
@@ -41,16 +41,16 @@
 </head>
 
 <body>
+    
     <div class="top">
         <div class="banner">
             <img src="Source/Open sesame.png" alt="banner">
-            <div class="banner_text">To Know About Your Payment</div>
+            <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
-    
     <div class="middle">
-        General Inquiries: (+94) 011 2881 000
-        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
+        General Inquiries: (+94) 011 2881 000 
+        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040   
     </div>
 
     <header class="header">
