--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="Contents/Home/HomeStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Home</title>
@@ -18,7 +18,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Initial text
-            document.querySelector('.banner_text').innerText = "To know about your payments";
+            document.querySelector('.banner_text').innerText = "To know about your payment";
 
             // Array of messages to loop through
             const messages = [
