--- a/events.html
+++ b/events.html
@@ -43,6 +43,18 @@
             margin-bottom: 10px;
         }
 
+        .event-card {
+            width: 300px;
+            margin: 20px 10px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+
         .event-description {
             color: #555;
         }
