--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Contents/Home/HomeStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Home</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="NativeStyle.css">
+    <link rel="stylesheet" href="Contents/SlideShow.css">
+    <link rel="stylesheet" href="Contents/ArticalSlideShow.css">
+    <link rel="stylesheet" href="Contents/PostShow.css">
+    <link rel="stylesheet" href="Contents/Footer.css">
+    <script>
     
         document.addEventListener("DOMContentLoaded", function () {
             // Initial text
