fixed the brand slider

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="Contents/PostShow.css">
     <link rel="stylesheet" href="Contents/Footer.css">
     <script>
-    
+
         document.addEventListener("DOMContentLoaded", function () {
             // Initial text
             document.querySelector('.banner_text').innerText = "To know about your payment";
@@ -343,26 +343,71 @@
 
     <!--line-->
     <hr>
-
-    <section>
+    <!--slider section start-->
+    <section class="wrapper">
         <h2
             style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: #11100f;">
             OUR LOCAL AND INTERNATIONAL PARTNERSHIPS</h2>
         <div id="home_brand_slider">
-            <div class="photo-square" style="--animation-speed: 5s ; --photo-size: 15%;  ">
-                <div class="photo-container">
+            <div class="brand-container">
+                <div class="brand_photo">
                     <img src="Source/slasscom.png" alt="Photo 1" onclick="location.href='https://slasscom.lk/';">
+                </div>
+                <div class="brand_photo">
                     <img src="Source/orelit-logo.png" alt="Photo 2" onclick="location.href='//www.orelit.com/';">
+                </div>
+                <div class="brand_photo">
                     <img src="Source/wso2-logo.png" alt="Photo 3" onclick="location.href='https://wso2.com/';">
+                </div>
+                <div class="brand_photo">
                     <img src="Source/SriLankan_Airlines_Logo.svg.5893408c5b896.avif" alt="Photo 4"
                         onclick="location.href='https://www.srilankan.com/en_uk/us';">
+                </div>
+                <div class="brand_photo">
                     <img src="Source/png-clipart-logo-hemas-holdings-plc-hemas-hospitals-brand-font-non-toxic-text-logo.png"
                         alt="Photo 5" onclick="location.href='https://www.hemas.com/';">
-                    <img src="Source/law.png" alt="Photo 6" onclick="location.href='https://www.sllc.ac.lk';">
-                    <img src="Source/uk ou.png" alt="Photo 7" onclick="location.href='//www.open.ac.uk/';">
-
                 </div>
+                <div class="brand_photo">
+
+                    <img src="Source/law.png" alt="Photo 6" onclick="location.href='https://www.sllc.ac.lk';">
+                </div>
+                <div class="brand_photo">
+
+                    <img src="Source/uk ou.png" alt="Photo 7" onclick="location.href='//www.open.ac.uk/';">
+                </div>
+                
+                <!--Duplicated logos for the slider-->
+
+                <div class="brand_photo">
+                    <img src="Source/slasscom.png" alt="Photo 1" onclick="location.href='https://slasscom.lk/';">
+                </div>
+                <div class="brand_photo">
+                    <img src="Source/orelit-logo.png" alt="Photo 2" onclick="location.href='//www.orelit.com/';">
+                </div>
+                <div class="brand_photo">
+                    <img src="Source/wso2-logo.png" alt="Photo 3" onclick="location.href='https://wso2.com/';">
+                </div>
+                <div class="brand_photo">
+                    <img src="Source/SriLankan_Airlines_Logo.svg.5893408c5b896.avif" alt="Photo 4"
+                        onclick="location.href='https://www.srilankan.com/en_uk/us';">
+                </div>
+                <div class="brand_photo">
+                    <img src="Source/png-clipart-logo-hemas-holdings-plc-hemas-hospitals-brand-font-non-toxic-text-logo.png"
+                        alt="Photo 5" onclick="location.href='https://www.hemas.com/';">
+                </div>
+                <div class="brand_photo">
+
+                    <img src="Source/law.png" alt="Photo 6" onclick="location.href='https://www.sllc.ac.lk';">
+                </div>
+                <div class="brand_photo">
+
+                    <img src="Source/uk ou.png" alt="Photo 7" onclick="location.href='//www.open.ac.uk/';">
+                </div>
+
+            </div>
+        </div>
     </section>
+    <!--slider section start-->
 
     <footer class="footer">
         <div class="wrapper footer-container ">
